Corrected overflow style for preformatted text.
Doesn't show scrollbars at all times now.

--- a/css/main.scss
+++ b/css/main.scss
@@ -76,7 +76,7 @@ p, pre{
 	margin: 0 0 2em 0;
 }
 pre{
-	overflow-x: scroll;
+	overflow-x: auto;
 }
 
 h1{
